<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_student_list__rv_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            app:layout_constraintBottom_toTopOf="@+id/activity_student_list__detailed_view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_student_list__detailed_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/new_student__button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_student__button"
                app:layout_constraintBottom_toTopOf="@+id/activity_student_list__subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/detailed_student__h_barrier"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#7b7b7b"
                app:layout_constraintBottom_toTopOf="@+id/activity_student_list__subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_student__button" />

            <TextView
                android:id="@+id/activity_student_list__subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/detailed_student__subtitle"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/detailed_student__iv_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailed_student__h_barrier" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/detailed_student__iv_avatar"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/detailed_student__v_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_student_list__subtitle"
                app:shapeAppearanceOverlay="@style/circleImageViewStyle"
                app:srcCompat="@drawable/anonym_cat" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/detailed_student__v_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="right"
                app:constraint_referenced_ids="detailed_student__iv_avatar" />

            <LinearLayout
                android:id="@+id/detailed_student__form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detailed_student__v_barrier"
                app:layout_constraintTop_toBottomOf="@id/activity_student_list__subtitle">

                <EditText
                    android:id="@+id/detailed_student__tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/detailed_student__name"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/detailed_student__tv_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/detailed_student__surname"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/detailed_student__tv_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/detailed_student__sex"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="20sp" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/del_student__button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del_student__button"
                app:layout_constraintBottom_toTopOf="@+id/activity_student_list__subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_student__button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_student__button"
                app:layout_constraintBottom_toTopOf="@+id/activity_student_list__subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
